making sure Neural Net 01 got the L2 regularizer results

--- a/Neural Net 01.ipynb
+++ b/Neural Net 01.ipynb
@@ -1287,6 +1287,26 @@
     "field_list = df_small_fully_clean['Field_ID'].values\n",
     "plot_actual_vs_predicted_fields(y, y_hat, field_list, in_ylim=(0,30), in_xlim=(0,30))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Finished--out of time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
